Fix alignment of login box on home page

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -23,7 +23,8 @@ text-align: center;
 .home #home-signin {
 text-align: right;
 }
-.home #greeting, .home #login {width:inherit; text-align: right;}
+.home #greeting, .home #login {width:inherit;}
+.home #greeting {text-align: right;}
 .home #signin form {
 background: url(/images/fff-ccc.png) bottom left repeat-x #fff;
 margin: -1.5em -0.25em 1em;
